# gkr

./: .gitignore  README.md  genjson.py  gkr.py  poly.py  sumcheck.py  test_gkr.py  util.py
circom/: package-lock.json  package.json
circom/circom/: sumcheck.circom  verfiyLayer.circom  verifier.circom
circom/circom/sumcheck/: sumcheckVerify.circom
gkr-verifier-circuits/circom/circom/: verifier.circom
gkr-verifier-circuits/circom/circom/poly/: multivariate.circom  optimizedGate.circom  univariate.circom
gkr-verifier-circuits/circom/circom/sumcheck/: recombineMulticlaim.circom  sumcheckVerify.circom
gkr-verifier/circom/circom/: verifier.circom
python/: poly.py  util.py
rust/: Cargo.toml  README.md  t.circom
rust/example/: input1.json  input2.json  input3.json
rust/src/: aggregator.rs  bin.rs  convert.rs  file_utils.rs  gkr.rs  lib.rs  parser.rs
rust/src/gkr/: poly.rs  prover.rs  sumcheck.rs
