[package]
name = "gkr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dag = { git = "https://github.com/jeong0982/circom" }
parser = { git = "https://github.com/jeong0982/circom" }
constraint_generation = { git = "https://github.com/jeong0982/circom" }
r1cs-file = { git = "https://github.com/jeong0982/zeropool-utils" }
wtns-file = { git = "https://github.com/jeong0982/zeropool-utils" }

# field element
halo2curves = { git = "https://github.com/privacy-scaling-explorations/halo2curves" }
ff = "0.12.0"
ethers-core = "0.17"

# MiMC
mimc-rs = { git = "https://github.com/jeong0982/mimc-rs" }

# cli
clap = { version = "4.0", features = ["derive"] }
